--- a/loginConfig.json
+++ b/loginConfig.json
@@ -4,6 +4,6 @@
 	"WEB_HTTP_URL_TEST": ["http://47.75.82.5:8101"],
 	"PAY_SERVER": "http://47.75.82.5:8101",
 	"httpmd5": "lz-123321.",
-	"QRcode": "https://app-g6m1gr.openinstall.io/js-test"，
+	"QRcode": "https://app-g6m1gr.openinstall.io/js-test",
 	"ApkVersion":"123456"
 }
