--- a/loginConfig.json
+++ b/loginConfig.json
@@ -1,8 +1,8 @@
 {
     "HOT_UPDATE_URL": ["https://lzgameupdate.oss-cn-hongkong.aliyuncs.com/update/"],
-    "GATE_SERVER_LIST": ["47.75.55.159:32167", "47.52.153.114:32167", "47.75.218.180:32167"],
-	"WEB_HTTP_URL_TEST": ["http://47.75.82.5:8101"],
-	"PAY_SERVER": "http://47.75.82.5:8101",
+    "GATE_SERVER_LIST": ["G000euqd8dy.ua800.com"],
+	"WEB_HTTP_URL_TEST": ["T000sgeplhv.ua800.com"],
+	"PAY_SERVER": "P000h242ar2.ua800.com",
 	"httpmd5": "lz-123321.",
 	"QRcode": "https://app-audes5.openinstall.io/js-test",
 	"VERSION_APK":"1"
