--- a/loginConfig.json
+++ b/loginConfig.json
@@ -1,5 +1,5 @@
 {
-    "HOT_UPDATE_URL": ["https://lzgameupdate.oss-cn-hongkong.aliyuncs.com/update/"],
+    "HOT_UPDATE_URL": ["https://lzgameupdate.oss-cn-hongkong.aliyuncs.com/update_2019060323/"],
     "GATE_SERVER_LIST": ["G000euqd8dy.ua800.com"],
     "WEB_HTTP_URL_TEST": ["http://T000sgeplhv.ua800.com"],
     "PAY_SERVER":  ["http://T000sgeplhv.ua800.com"],
