--- a/loginConfig.json
+++ b/loginConfig.json
@@ -1,9 +1,9 @@
 {
-    "HOT_UPDATE_URL": ["lzgameupdate.oss-cn-hongkong.aliyuncs.com/update/"],
+    "HOT_UPDATE_URL": ["//lzgameupdate.oss-cn-hongkong.aliyuncs.com/update/"],
     "GATE_SERVER_LIST": ["GT001euqd8y.ua800.com"],
-    "WEB_HTTP_URL_TEST": ["TT001sgeplv.ua800.com"],
-    "PAY_SERVER":  ["TT001sgeplv.ua800.com"],
+    "WEB_HTTP_URL_TEST": ["//TT001sgeplv.ua800.com"],
+    "PAY_SERVER":  ["//TT001sgeplv.ua800.com"],
     "httpmd5": "lz-123321.",
-    "QRcode": "app-audes5.openinstall.io/js-test",
+    "QRcode": "//app-audes5.openinstall.io/js-test",
     "VERSION_APK":"1"
 }
