--- a/loginConfig.json
+++ b/loginConfig.json
@@ -1,5 +1,5 @@
 {
-    "HOT_UPDATE_URL": ["https://lzgameupdate.oss-cn-hongkong.aliyuncs.com/update_2019060323/"],
+    "HOT_UPDATE_URL": ["https://lzgameupdate.oss-cn-hongkong.aliyuncs.com/update/"],
     "GATE_SERVER_LIST": ["GT001euqd8y.ua800.com"],
     "WEB_HTTP_URL_TEST": ["https://TT001sgeplv.ua800.com"],
     "PAY_SERVER":  ["https://TT001sgeplv.ua800.com"],
