--- a/loginConfig.json
+++ b/loginConfig.json
@@ -1,8 +1,8 @@
 {
     "HOT_UPDATE_URL": ["http://upt002yvmu5rb.ua800.com/"],
-    "GATE_SERVER_LIST": ["GT002euqd8y.ua800.com"],
-    "WEB_HTTP_URL_TEST": ["http://TT002sgeplv.ua800.com"],
-    "PAY_SERVER":  ["http://TT002sgeplv.ua800.com"],
+    "GATE_SERVER_LIST": ["10.10.100.165:32167"],
+    "WEB_HTTP_URL_TEST": ["http://10.10.100.75:8101"],
+    "PAY_SERVER":  ["http://10.10.100.75:8101"],
     "httpmd5": "lz-123321.",
     "QRcode": "http://app-audes5.openinstall.io/js-test",
     "VERSION_APK":"1"
